# parivyaya

./: .gitignore  .nojekyll  404.html  CNAME  Dockerfile.ui  Dockerfile.worker  Makefile  README.md  __next.__PAGE__.txt  __next._full.txt  __next._tree.txt  _not-found.html  _not-found.txt  analysis.html  analysis.txt  docker-compose.yaml  index.html  index.txt  pyproject.toml  transactions.html  transactions.txt  upload.html  upload.txt
.github/workflows/: deploy.yml
_next/static/chunks/: 07ece511244deba3.css  2c05675380659bb9.js  524016b58a6ee1d5.js  6b0969ec1614ce69.js  7bd21c9ded680881.js  7f3975fdaa06a1ad.js  8261fc3d2a0b9f7d.css  (+5 more)
_not-found/: __next._full.txt  __next._index.txt  __next._not-found.__PAGE__.txt  __next._not-found.txt  __next._tree.txt
analysis/: __next._full.txt  __next._index.txt  __next._tree.txt  __next.analysis.__PAGE__.txt  __next.analysis.txt
app/: api_models.py  database.py  db_models.py  kafka_worker.py  logger.py  main.py  models.py  read.py  settings.py  worker.py
app/routes/: __init__.py  jobs.py  spending.py  transactions.py
k8s/: README.md  ingress.yaml  kafka.yaml  namespace.yaml  postgres.yaml  ui.yaml  worker.yaml
parivyaya/: cli.py  enrich.py  logger.py  models.py  read.py  settings.py
src/parivyaya/: cli.py  enrich.py  models.py  read.py  settings.py  utils.py
tests/: test_parivyaya.py
transactions/: __next._full.txt  __next._index.txt  __next._tree.txt  __next.transactions.__PAGE__.txt  __next.transactions.txt
ui/: .env.local.example  README.md  next.config.ts  package-lock.json  package.json
upload/: __next._index.txt  __next._tree.txt  __next.upload.__PAGE__.txt  __next.upload.txt
(+18 files in other folders)
