[project]
name = "parivyaya"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "click>=8.3.0",
    "pandas>=2.3.3",
    "pydantic>=2.12.4",
    "pydantic-settings>=2.11.0",
    "rich>=14.2.0",
]

[build-system]
requires = ["uv_build>=0.9.8,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "ruff>=0.14.4",
]

[project.scripts]
parivyaya = "parivyaya.cli:cli"
