[project]
name = "parivyaya"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "aiokafka>=0.12.0",
    "alembic>=1.14.0",
    "asyncpg>=0.30.0",
    "fastapi[standard]>=0.121.1",
    "langchain>=1.0.5",
    "langchain-google-genai>=3.0.1",
    "pandas>=2.3.3",
    "pydantic-settings>=2.11.0",
    "pypdf>=5.1.0",
    "sqlalchemy[asyncio]>=2.0.36",
    "uvicorn>=0.38.0",
]
